--- a/biomodels/p53/p53-atm.ipynb
+++ b/biomodels/p53/p53-atm.ipynb
@@ -7,7 +7,7 @@
         "import tellurium as te, numpy as np"
       ],
       "outputs": [],
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -20,7 +20,7 @@
         "te.setDefaultPlottingEngine('matplotlib')"
       ],
       "outputs": [],
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -30,10 +30,10 @@
     {
       "cell_type": "code",
       "source": [
-        "model = te.loadAntimonyModel('p53-arf.sb')"
+        "model = te.loadAntimonyModel('p53-atm.sb')"
       ],
       "outputs": [],
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -47,7 +47,7 @@
         "model.integrator.variable_step_size = False"
       ],
       "outputs": [],
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -68,7 +68,7 @@
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<matplotlib.figure.Figure at 0x7fab2b4d2588>"
+              "<matplotlib.figure.Figure at 0x7fab292af6a0>"
             ],
             "image/png": [
               "iVBORw0KGgoAAAANSUhEUgAAAmMAAAFTCAYAAAB1WgtNAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\n",
@@ -820,7 +820,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 6,
+      "execution_count": 12,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -838,7 +838,7 @@
         "        writer.writerow(sim[k,:])"
       ],
       "outputs": [],
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
